pgAdmin connection established
runs with cd to ratingswebsite path and then rails s
you will have to run rake db:create:all to generate the tables

In pgAdmin you need to create a ‘login role’ with user name
ratingswebsite and password ‘pass’

gems like pg through terminal

--- a/ratingswebsite/app/views/login/homepage.html.erb
+++ b/ratingswebsite/app/views/login/homepage.html.erb
@@ -51,7 +51,7 @@ padding-top: 70px;
 <ul class="nav navbar-nav">
 <li>
 <!-- replace # with distination-->
-<a href="#">Restaurant Info</a>
+<a href="http://localhost:3000/restaurants">Restaurant Info</a>
 </li>
 <li>
 <a href="#">Rater Info</a>
