--- a/ratingswebsite/app/views/menuitems/index.html.erb
+++ b/ratingswebsite/app/views/menuitems/index.html.erb
@@ -37,27 +37,32 @@
 </nav>
 <br> <br>
 
-<h1>Listing Restaurants</h1>
+<h1>Listing Menuitems</h1>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Rtype</th>
-      <th>Url</th>
+      <th>Mtype</th>
+      <th>Mcategory</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Restaurantid</th>
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
-    <% @restaurants.each do |restaurant| %>
+    <% @menuitems.each do |menuitem| %>
       <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= restaurant.rtype %></td>
-        <td><%= restaurant.url %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= menuitem.name %></td>
+        <td><%= menuitem.mtype %></td>
+        <td><%= menuitem.mcategory %></td>
+        <td><%= menuitem.description %></td>
+        <td><%= menuitem.price %></td>
+        <td><%= menuitem.restaurantID %></td>
+        <td><%= link_to 'Show', menuitem %></td>
+        <td><%= link_to 'Edit', edit_menuitem_path(menuitem) %></td>
+        <td><%= link_to 'Destroy', menuitem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -65,4 +70,4 @@
 
 <br>
 
-<%= link_to 'New Restaurant', new_restaurant_path %>
+<%= link_to 'New Menuitem', new_menuitem_path %>
