--- a/ratingswebsite/app/views/login/homepage.html.erb
+++ b/ratingswebsite/app/views/login/homepage.html.erb
@@ -44,7 +44,7 @@ padding-top: 70px;
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
-<a class="navbar-brand" href="localhost:3000">RestaurantRater</a>
+<a class="navbar-brand" href="http://localhost:3000">RestaurantRater</a>
 </div>
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -60,7 +60,11 @@ padding-top: 70px;
 <a href="http://localhost:3000/menuitems">Food</a>
 </li>
 <li>
+<a href="http://localhost:3000/search">Search</a>
+</li>
+<li>
 <a href="#">Analytics</a>
+</li>
 </li>
 </ul>
 </div>
