--- a/ratingswebsite/app/views/restaurants/index.html.erb
+++ b/ratingswebsite/app/views/restaurants/index.html.erb
@@ -27,7 +27,11 @@
 <a href="http://localhost:3000/menuitems">Food</a>
 </li>
 <li>
+<a href="http://localhost:3000/search">Search</a>
+</li>
+<li>
 <a href="#">Analytics</a>
+</li>
 </li>
 </ul>
 </div>
