--- a/ratingswebsite/app/views/menuitems/_form.html.erb
+++ b/ratingswebsite/app/views/menuitems/_form.html.erb
@@ -32,8 +32,8 @@
     <%= f.text_field :price %>
   </div>
   <div class="field">
-    <%= f.label :restaurantID %><br>
-    <%= f.number_field :restaurantID %>
+    <%= f.label :restaurant_id %><br>
+    <%= f.number_field :restaurant_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
