--- a/ratingswebsite/app/views/menuitems/show.html.erb
+++ b/ratingswebsite/app/views/menuitems/show.html.erb
@@ -27,7 +27,7 @@
 
 <p>
   <strong>Restaurantid:</strong>
-  <%= @menuitem.restaurantID %>
+  <%= @menuitem.restaurant_id %>
 </p>
 
 <%= link_to 'Edit', edit_menuitem_path(@menuitem) %> |
