--- a/ratingswebsite/app/views/menuitems/index.html.erb
+++ b/ratingswebsite/app/views/menuitems/index.html.erb
@@ -51,7 +51,7 @@
       <th>Mcategory</th>
       <th>Description</th>
       <th>Price</th>
-      <th>Restaurantid</th>
+      <th>Restaurant_id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -63,7 +63,7 @@
         <td><%= menuitem.mcategory %></td>
         <td><%= menuitem.description %></td>
         <td><%= menuitem.price %></td>
-        <td><%= menuitem.restaurantID %></td>
+        <td><%= menuitem.restaurant_id %></td>
         <td><%= link_to 'Show', menuitem %></td>
         <td><%= link_to 'Edit', edit_menuitem_path(menuitem) %></td>
         <td><%= link_to 'Destroy', menuitem, method: :delete, data: { confirm: 'Are you sure?' } %></td>
