--- a/ratingswebsite/app/views/raters/index.html.erb
+++ b/ratingswebsite/app/views/raters/index.html.erb
@@ -43,7 +43,7 @@
 
 <h1>Listing Raters</h1>
 
-<table>
+<table BORDER="2" CELLPADDING="2" CELLSPACING="2">
   <thead>
     <tr>
       <th>Email</th>
