--- a/ratingswebsite/app/views/raters/index.html.erb
+++ b/ratingswebsite/app/views/raters/index.html.erb
@@ -59,7 +59,7 @@
     <% @raters.each do |rater| %>
       <tr>
         <td><%= rater.email %></td>
-        <td><%= rater.name %></td>
+        <td><%= rater.rater_name %></td>
         <td><%= rater.join_date %></td>
         <td><%= rater.rtype %></td>
         <td><%= rater.reputation %></td>
