--- a/ratingswebsite/app/views/raters/_form.html.erb
+++ b/ratingswebsite/app/views/raters/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :rater_name %>
   </div>
   <div class="field">
     <%= f.label :join_date %><br>
