--- a/ratingswebsite/app/views/login/homepage.html.erb
+++ b/ratingswebsite/app/views/login/homepage.html.erb
@@ -63,7 +63,6 @@ padding-top: 70px;
 <a href="http://localhost:3000/search">Search</a>
 </li>
 <li>
-<a href="#">Analytics</a>
 </li>
 </li>
 </ul>
@@ -74,23 +73,8 @@ padding-top: 70px;
 </nav>
 
 <!-- Page Content -->
-<div class="container">
 
-<div class="row">
-<div class="col-lg-12 text-center">
-<h1>Welcome To Restaurant Rater</h1>
-<br>
-<ul class="list-unstyled">
-<form action="#">
-<li>Username:</li>
-<input type="text" name="FirstName" value=""> <br> <br>
-<li>Password:</li>
-<input type="text" name="LastName" value="">
-<br> <br>
-
-<input type="submit" value="Login">
-</ul>
-</div>
+<%= image_tag "restaurant.jpg" %>
 </div>
 <!-- /.row -->
 
