--- a/ratingswebsite/app/views/pages/search.html.erb
+++ b/ratingswebsite/app/views/pages/search.html.erb
@@ -32,10 +32,6 @@
 <li>
 <a href="http://localhost:3000/search">Search</a>
 </li>
-<li>
-<a href="#">Analytics</a>
-</li>
-</li>
 </ul>
 </div>
 <!-- /.navbar-collapse -->
@@ -91,24 +87,12 @@
 <div class="field">
 <!-- query i -->
 <%= form_tag("/search", method: "get") do %>
-    <%= label_tag(:q, "Search for highest rated restaurants of type: ") %>
+    <%= label_tag(:q, "Search for highly rated restaurants of type: ") %>
     <%= options = options_from_collection_for_select(@restaurantList, 'id', 'rtype') %>
     <%= select_tag(:itype, options, :itype => params[:itype]) %>
     <%= submit_tag "Search" %>
 <% end %>
 </div
-
-<br>
-
-<!-- query j -->
-<%= form_tag("/search", method: "get") do %>
-<%= label_tag(:q, "Are restaurants of type: ") %>
-<%= options = options_from_collection_for_select(@restaurantList, 'id', 'rtype') %>
-<%= select_tag(:name, options) %>
-<%= label_tag(:q, "more popular?") %>
-<%= submit_tag("Check") %>
-<% end %>
-
 
 <br> <br>
 
@@ -118,14 +102,14 @@
 
 <!-- query l -->
 <%= form_tag("/search", method: "get") do %>
-<%= label_tag(:q, "Display best rater info in terms of: ") %>
+<%= label_tag(:q, "Display rater info for highest raters in terms of: ") %>
 <%= select_tag(:lchoice, options_for_select([['food', 1],['mood', 2]], 2), :lchoice => params[:lchoice]) %>
 <%= submit_tag("Display") %>
 <% end %>
 <br>
 <!-- query m -->
 <%= form_tag("/search", method: "get") do %>
-<%= label_tag(:q, "Display raters for the restaurant: ") %>
+<%= label_tag(:q, "Display item ratings for the restaurant: ") %>
 <% options = options_from_collection_for_select(@restaurantList, 'id', 'name') %>
 <%= select_tag(:mchoice, options, :mchoice => params[:mchoice]) %>
 <%= submit_tag("Display") %>
@@ -135,7 +119,7 @@
 <%= form_tag("/search", method: "get") do %>
 <%= label_tag(:q, "Raters with ratings below: ") %>
 <% options = options_from_collection_for_select(@raterList, 'id', 'rater_name') %>
-<%= select_tag(:name, options) %>
+<%= select_tag(:nrater, options, :nrater => params[:nrater]) %>
 <%= submit_tag("Search") %>
 <% end %>
 <br>
@@ -146,11 +130,11 @@
 
 <br> <br>
 
-<!-- query_fgko -->
+<!-- query_fgkoj -->
 
 <%= form_tag("/search", method: "get") do %>
 <%= label_tag(:q, "Show: ") %>
-<%= select_tag(:fchoice, options_for_select([['rating distribution', 1],['details for restaurants not rated in january', 2],['best rater info', 3],['diverse raters', 4]], 4), :fchoice => params[:fchoice]) %>
+<%= select_tag(:fchoice, options_for_select([['rating distribution', 1],['details for restaurants not rated in january', 2],['best rater info', 3],['diverse raters', 4], ['popularity of restaurant types', 5]], 5), :fchoice => params[:fchoice]) %>
 <%= submit_tag "Display" %>
 <% end %>
 
